ecsw-2048 initial check in for ipv6 support in stackpath_compute_workload resource
